--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -93,6 +93,9 @@
                             </a>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="{{ path('settings') }}">{{'menu.settings'|trans}}</a></li>
+                                {% for municipality in app.user.adminMunicipalities %}
+                                    <li><a href="{{ path('pre_matches', {'id': municipality.id}) }}">{{ municipality.name }}</a></li>
+                                {% endfor %}
                                 <li><a href="{{ path('fos_user_security_logout') }}">{{'menu.signout'|trans}}</a></li>
                             </ul>
                         <li>
@@ -107,13 +110,11 @@
                                     <li><a href="{{ path('admin_start') }}">Admin start</a></li>
                                     {% if is_granted('ROLE_SUPER_ADMIN') %}
                                         <li><a href="{{ path('admin_user_priviledges') }}">User Priviledges</a></li>
+                                        <li><a href="{{ path('admin_municipality_administrators') }}">Kommunadministratörer</a></li>
                                     {% endif %}
                                     <li><a href="{{ path('admin_connections') }}">Matchade kompisar</a></li>
                                     <li><a href="{{ path('admin_users') }}">Användare</a></li>
                                     <li><a href="{{ path('admin_statistics') }}">Statistik</a></li>
-                                    {% for municipality in app.user.adminMunicipalities %}
-                                        <li><a href="{{ path('admin_pre_matches', {'id': municipality.id}) }}">{{ municipality.name }}</a></li>
-                                    {% endfor %}
                                 </ul>
                             <li>
                         {% endif %}
