--- a/app/Resources/views/preMatch/index.html.twig
+++ b/app/Resources/views/preMatch/index.html.twig
@@ -48,7 +48,16 @@
                                 <td>
                                 </td>
                                 <td rowspan="3" style="vertical-align: middle">
-                                    <a href="#" class="btn btn-primary confirm-match">Bekräfta matchning</a>
+                                    <a
+                                        href="#"
+                                        class="btn btn-primary confirm-match"
+                                        data-pre-match-id="{{ preMatch.id }}"
+                                    >Bekräfta matchning</a><br><br>
+                                    <a
+                                        href="#"
+                                        class="btn btn-danger delete-match"
+                                        data-pre-match-id="{{ preMatch.id }}"
+                                    >Ta bort</a>
                                 </td>
                             </tr>
                             <tr id="row-{{ preMatch.id }}-2">
@@ -68,7 +77,7 @@
                                     </a>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr id="row-{{ preMatch.id }}-3">
                                 <td colspan="5">
                                     [Text om matchningen]
                                 </td>
@@ -110,6 +119,22 @@
                 $('#row-' + preMatchId + '-2 .fluent-speaker-name').text(name);
                 $('#row-' + preMatchId + '-2 .fluent-speaker-email').text(email);
             });
+        });
+
+        $('.delete-match').click(function(e) {
+            e.preventDefault();
+            if (confirm('Är du säker på att du vill ta bort matchningsförslaget?')) {
+                var preMatchId = $(this).data('preMatchId');
+                $.ajax({
+                    url: Routing.generate('delete_pre_match', {
+                        municipalityId: {{ municipality.id }},
+                        preMatchId: preMatchId
+                    }),
+                    method: 'DELETE'
+                }).done(function () {
+                    $('#row-' + preMatchId + '-1, #row-' + preMatchId + '-2, #row-' + preMatchId + '-3').fadeOut();
+                });
+            }
         });
     });
 </script>
