--- a/app/Resources/views/static/workWithUs.html.twig
+++ b/app/Resources/views/static/workWithUs.html.twig
@@ -13,8 +13,9 @@
 
             <div class="col-md-4 col-sm-12">
                 <div class="partner-wrapper">
-                    <img src="{{ asset('images/postkodstiftelsen.jpg') }}" class="partner-logo">
-                    <img src="{{ asset('images/sigtuna.png') }}" class="partner-logo">
+                    <img src="{{ asset('images/delicato.png') }}" alt="Delicato" class="partner-logo"><br>
+                    <img src="{{ asset('images/postkodstiftelsen.jpg') }}" alt="Postkodstiftelsen" class="partner-logo"><br>
+                    <img src="{{ asset('images/sigtuna.png') }}" alt="Sigtunastiftelsen" class="partner-logo">
                 </div>
             </div>
 
