--- a/app/Resources/views/admin2/user/form.html.twig
+++ b/app/Resources/views/admin2/user/form.html.twig
@@ -52,9 +52,9 @@
             </div>
 
             <div class="form-group">
-                {{ form_label(form.musicFriend) }}
+                {{ form_label(form.type) }}
                 <div class="col-sm-6 col-md-offset-4">
-                    {{ form_widget(form.musicFriend) }}
+                    {{ form_widget(form.type) }}
                 </div>
             </div>
 
@@ -148,8 +148,8 @@
             </div>
 
             <div class="form-group">
-                {{ form_widget(requestForm.musicFriend) }}
-                {{ form_errors(requestForm.musicFriend) }}
+                {{ form_widget(requestForm.type) }}
+                {{ form_errors(requestForm.type) }}
             </div>
             {{ form_rest(form) }}
             <div class="text-right">
