--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -39,7 +39,7 @@
     <!--[if IE]>
     <link rel="stylesheet" href="/css/ie-style.css">
     <![endif]-->
-    <link href="/css/custom.css" rel="stylesheet">
+    <link href="/css/custom.css?v2" rel="stylesheet">
 
     <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     <style type="text/css">
@@ -73,7 +73,7 @@
                     <!-- Logo and Head Text -->
                     <div class="logo">
                         <!-- Logo Icon and Heading -->
-                        <img src="/images/logo.png" class="img-responsive" alt="Kompisbyrån" />
+                        <img src="/images/logo.png?v2" class="img-responsive" alt="Kompisbyrån" />
                     </div>
                 </a>
             </div>
