--- a/app/Resources/views/form/fields.html.twig
+++ b/app/Resources/views/form/fields.html.twig
@@ -1,7 +1,7 @@
 {% extends 'bootstrap_3_horizontal_layout.html.twig' %}
 
 {% block form_label_class -%}
-    col-sm-4
+    col-lg-2
 {%- endblock form_label_class %}
 
 {% block form_group_class -%}
